--- a/css1.css
+++ b/css1.css
@@ -55,3 +55,5 @@ hr{border-bottom: 2px dashed #237B7B;
 body {display:flex; flex-direction:column;}
          footer{ text-color: #FFFFFF; }
          main {border-color: black;}
+         }
+
