--- a/css1.css
+++ b/css1.css
@@ -36,6 +36,7 @@ table {
   border-collapse:collapse;
   width:60%;
   margin-left:30%;
+           margin-bottom:15%
 }
 th,td{border:3px inset #000000;
   padding:8px;
