--- a/css1.css
+++ b/css1.css
@@ -17,11 +17,12 @@ article{ text-align:left; font-size: 20px; margin-top:10px; border-style:ridge; 
            flex-direction: row;
            justify-content: space-around:
   }
+          dl {border-style:ridge; font-size:20px; max-width:700px; margin-left:15px }
 img { margin: 1em;
         box-shadow: 5px 10px 15px #777; margin-left:75px }
 p {border-style:ridge; font-size:20px; max-width:700px; margin-left:20px}
 h2{text-align:center; border-style:ridge;}
-ul{font-size:16px;}
+ul{font-size:16px; margin-left:35%; margin-right:5%;}
 main{text-align:center; }
 iframe { margin-left:270px; margin-top:20px;}
 
