--- a/css1.css
+++ b/css1.css
@@ -11,7 +11,7 @@ header {text-align: center; margin-bottom:30px; font-size:30px; border-style:rid
 }
 footer { text-align:center;  border-style:ridge;
 }
-article{ text-align:left; font-size: 20px; margin-top:10px; border-style:ridge; width:950px; margin-left: 450px; margin-bottom:10px;
+article{ text-align:left; font-size: 20px; margin-top:10px; border-style:ridge; width:950px; margin-left: 650px; margin-bottom:10px;
 }
 #gallery { display: flex;
            flex-direction: row;
@@ -36,7 +36,7 @@ body {display:flex; }
 table {
   border-collapse:collapse;
   width:60%;
-  margin-left:50%;
+  margin-left:700px;
            margin-bottom:15%
 }
 th,td{border:3px inset #000000;
