--- a/css1.css
+++ b/css1.css
@@ -11,13 +11,13 @@ header {text-align: center; margin-bottom:30px; font-size:30px; border-style:rid
 }
 footer { text-align:center;  border-style:ridge;
 }
-article{ text-align:left; font-size: 20px; margin-top:10px; border-style:ridge; width:950px; margin-left: 500px; margin-bottom:10px;
+article{ text-align:left; font-size: 20px; margin-top:10px; border-style:ridge; width:650px; margin-left: 500px; margin-bottom:10px;
 }
 #gallery { display: flex;
            flex-direction: row;
            justify-content: space-around:
   }
-          dl {border-style:ridge; font-size:20px; max-width:700px; margin-left:15px }
+dl{border-style:ridge; font-size:20px; max-width:700px; margin-left:15px }
 img { margin: 1em;
         box-shadow: 5px 10px 15px #777; margin-left:75px }
 p {border-style:ridge; font-size:20px; max-width:700px; margin-left:20px}
@@ -36,8 +36,7 @@ body {display:flex; }
 table {
   border-collapse:collapse;
   width:40%;
-  margin-left:700px;
-           margin-bottom:15%
+  margin-left:50%;
 }
 th,td{border:3px inset #000000;
   padding:8px;
@@ -54,8 +53,6 @@ td[colspan = "3"] {
 }
 form { font-family: Georgia;
          width: 850px; padding: 10px; border: 3px inset #000000; justify-content:center; margin-left:20%;text-align:center;
-}
-hr{border-bottom: 2px dashed #237B7B;
 }
 
 
