--- a/css1.css
+++ b/css1.css
@@ -30,26 +30,27 @@ body { background-image: url("https://images.rawpixel.com/image_800/cHJpdmF0ZS9s
 @media (min-width: 600px) {
  body {display:flex; flex-direction:column;}
  }
+td[colspan = "3"] {
 
 table {
   border-collapse:collapse;
   width:60px;
   margin-left:50px;
-  background-color:#FFFFFF;
+  background-color:white;
 }
 th,td{border:3px inset #000000;
   padding:8px;
   text-align:left;
+      background-color:white,
 }
 th{background-color:white;
 }
 tr:nth-child(even){
   background-color:white;
 }
+  }
 
-td[colspan = "3"] {
-  
-}
+
 form { font-family: Georgia;
          width: 850px; padding: 10px; border: 3px inset #000000; justify-content:center; margin-left:20%;text-align:center;
 }
