--- a/css1.css
+++ b/css1.css
@@ -27,8 +27,6 @@ main{text-align:center; }
 iframe { margin-left:270px; margin-top:20px;}
 
 body { background-image: url("https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA2L3JtNjIyLXJlbWl4LTAwNWEtMTFrLmpwZw.jpg"); background-repeat: no-repeat; background-size:cover; }
-@media (min-width: 600px) {
- body {display:flex; flex-direction:column;}
  }
 
 table {
@@ -50,5 +48,6 @@ tr:nth-child(even){
 form { font-family: Georgia;
          width: 850px; padding: 10px; border: 3px inset #000000; justify-content:center; margin-left:20%;text-align:center;
 }
-
+@media (max-width: 728px) {
+ body {display:flex; flex-direction:column;}
 
