--- a/css1.css
+++ b/css1.css
@@ -31,8 +31,8 @@ body { background-image: url("https://images.rawpixel.com/image_800/cHJpdmF0ZS9s
 
 table {
   border-collapse:collapse;
-  width:100px;
-  margin-left:350px;
+  width:60%;
+  margin-left:450px;
 }
 th,td{border:3px inset #000000;
   padding:8px;
@@ -48,6 +48,5 @@ tr:nth-child(even){
 form { font-family: Georgia;
          width: 850px; padding: 10px; border: 3px inset #000000; justify-content:center; margin-left:20%;text-align:center;
 }
-@media (max-width: 728px) {
- body {display:flex; flex-direction:column;}
+
 
