--- a/css1.css
+++ b/css1.css
@@ -43,6 +43,7 @@ tr:nth-child(even){
 }
 tr:nth-child(odd){
   background-color:#FFFFFF;
+}
 form { font-family: Georgia;
          width: 850px; padding: 10px; border: 3px inset #000000; justify-content:center; margin-left:20%;text-align:center;
 }
